typescript/checker/tests/conformance/es6/templates/taggedTemplateStringsWithIncompatibleTypedTags.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            184,
        ),
        hi: BytePos(
            185,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/taggedTemplateStringsWithIncompatibleTypedTags.ts:10:5
   |
10 | var f: I;
   |     ^

